Update to modern libs for recode.